Pretty up form page

--- a/email_bot_frontend/bot_form/templates/bot_form/form.html
+++ b/email_bot_frontend/bot_form/templates/bot_form/form.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <h1>Form Home</h1>
-        {% for data in data %}
-            <p>{{ data }}</p>
-        {% endfor %}
-    </body>
-</html>
+{% extends "bot_form/base.html" %}
+{% block content %}
+    <h1>Form Home</h1>
+    {% for data in data %}
+        <p>{{ data }}</p>
+    {% endfor %}
+{% endblock content %}
