Added users and bot classes

--- a/email_bot_frontend/bot_form/templates/bot_form/form.html
+++ b/email_bot_frontend/bot_form/templates/bot_form/form.html
@@ -1,7 +1,13 @@
 {% extends "bot_form/base.html" %}
 {% block content %}
     <h1>Form Home</h1>
-    {% for data in data %}
-        <p>{{ data }}</p>
+    {% for bot in data %}
+        <p>Sender email: {{ bot.sender }}</p>
+        <p>From email: {{ bot.from_email }}</p>
+        <p>To email: {{ bot.to_email }}</p>
+        <p>Email password: {{ bot.email_password }}</p>
+        <p>Subject: {{ bot.subject }}</p>
+        <p>Email Content: {{ bot.email_content }}</p>
     {% endfor %}
+    
 {% endblock content %}
