--- a/email_bot_frontend/bot_form/templates/bot_form/base.html
+++ b/email_bot_frontend/bot_form/templates/bot_form/base.html
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{% url 'form-home' %}">Home</a>
+                    <!--<a class="nav-item nav-link" href="{% url 'form-home' %}">Home</a> -->
                     <!-- <a class="nav-item nav-link" href="/about">About</a> -->
                     </div>
                     <!-- Navbar Right Side -->
@@ -49,6 +49,7 @@
                     </div>
                 {% endfor %}
             {% endif %}
+
             {% block content %}{% endblock %}
         </div>
         
