--- a/email_bot_frontend/bot_form/templates/bot_form/form.html
+++ b/email_bot_frontend/bot_form/templates/bot_form/form.html
@@ -1,6 +1,11 @@
 {% extends "bot_form/base.html" %}
 {% block content %}
     <h1>Form Home</h1>
+    <br>
+    <form method="get" action="{%url 'bot-create'%}">
+        <button type="submit">Create Bot</button>
+    </form>
+    <br>
     {% for bot in bots %}
         <p>Sender email: {{ bot.sender }}</p>
         <p>Email password: {{ bot.email_password }}</p>
@@ -8,7 +13,7 @@
         <p>To email: {{ bot.to_email }}</p>
         <p>Subject: {{ bot.subject }}</p>
         <p>Email Content: {{ bot.email_content }}</p>
-        <h1>----</h1>
+        <h1>--------------</h1>
     {% endfor %}
     
     
