Todo comments for bot form

--- a/email_bot_frontend/bot_form/templates/bot_form/email_bot_form.html
+++ b/email_bot_frontend/bot_form/templates/bot_form/email_bot_form.html
@@ -2,6 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+    <!-- TODO Check boxes to allow for any 1 or all of the criteria creations. -->
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
